--- a/LiveCamera/LiveCamera/AppEntry/Info.plist
+++ b/LiveCamera/LiveCamera/AppEntry/Info.plist
@@ -2,11 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 	<key>API_KEY</key>
 	<string>AIzaSyDFRfyok-lCQs4y2VqNluMqTfjdY9NLO8A</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -25,6 +20,7 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+    
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -35,13 +31,37 @@
 				<string>com.googleusercontent.apps.522876027817-66fvstuopv71ks2s5nrj0l9a5dqkhl3t</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb755687608095850</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>CLIENT_ID</key>
 	<string>522876027817-66fvstuopv71ks2s5nrj0l9a5dqkhl3t.apps.googleusercontent.com</string>
+	<key>FacebookAppID</key>
+	<string>755687608095850</string>
+	<key>FacebookDisplayName</key>
+	<string>LiveMirror</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
