绑定设备流程

--- a/LiveCamera/Podfile
+++ b/LiveCamera/Podfile
@@ -19,7 +19,7 @@ targetsArray.each do |t|
         pod 'FBSDKCoreKit'
         pod 'FBSDKLoginKit'
         pod 'FBSDKShareKit'
-        pod 'NodeMediaClient'
+        pod 'NodeMediaClient', '~> 2.4.4'
     end
 
 end
@@ -40,4 +40,4 @@ end
 #Using SDWebImage (4.3.3)
 #Using YYCache (1.0.4)
 #Using YYModel (1.0.4)
-Installing NodeMediaClient (2.4.4)
+#Installing NodeMediaClient (2.4.4)
