--- a/LiveCamera/LiveCamera/AppEntry/Info.plist
+++ b/LiveCamera/LiveCamera/AppEntry/Info.plist
@@ -2,16 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>需要获取相册查看权限</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>需要获取相册管理权限</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDFRfyok-lCQs4y2VqNluMqTfjdY9NLO8A</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>LiveMirror</string>
+	<string>Livemirror</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -65,6 +61,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>需要获取相册管理权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要获取相册查看权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
